cabal-version:      2.4
name:               with-ext
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Frank Staals
maintainer:         frank@fstaals.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: changelog.org
                    changelog

source-repository head
  type:     git
  location: https://github.com/noinia/with-ext


common setup
  build-depends:
      base                    >= 4.11      &&     < 5
    , lens                    >= 4.18
    , aeson                   >= 1.0
    , semigroups              >= 0.18
    , semigroupoids           >= 5
    , template-haskell
    , QuickCheck              >= 2.5
    , quickcheck-instances    >= 0.3
    , deepseq                 >= 1.1
    , bifunctors              >= 4.1
    , random                  >= 1.2

  default-language:    Haskell2010

  default-extensions:
      TypeFamilies
    , GADTs
    , KindSignatures
    , DataKinds
    , TypeOperators
    , ConstraintKinds
    , PolyKinds
    , RankNTypes
    , TypeApplications
    , ScopedTypeVariables

    , PatternSynonyms
    , TupleSections
    , LambdaCase
    , ViewPatterns

    , StandaloneDeriving
    , GeneralizedNewtypeDeriving
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DeriveGeneric

    , FlexibleInstances
    , FlexibleContexts
    , MultiParamTypeClasses
    , DerivingStrategies
    , DerivingVia

library
  import: setup
  ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs: src

  exposed-modules:
    Data.Ext
    Data.Ext.Default
    Data.Ext.Church
    Data.Ext.Zero
    Data.Ext.ZeroCost

  build-depends: tasty-bench


benchmark benchmarks
  import: setup
  ghc-options: -Wall -O2 -rtsopts -fno-warn-unticked-promoted-constructors

  hs-source-dirs: benchmarks
  main-is: Benchmarks.hs
  type: exitcode-stdio-1.0

  -- other-modules: Benchmark.Util

  build-depends:
      with-ext
    , tasty-bench        >= 0.3
